--- a/resources/views/ad-detail/partials/slider.twig
+++ b/resources/views/ad-detail/partials/slider.twig
@@ -23,7 +23,7 @@
                 {% endfor %}
             {% endif %}
         </div>
-        <div class="w-100 row pl-3 slider-controller-bar">
+        <div class="row pl-3 slider-controller-bar">
             <div class="col-12 bg-light row m-0 py-1">
                 <div class="col-6">
                     <a href="#" class="a-sahibinden-type" onclick="fotorama.requestFullScreen()">
